[package]
name = "arcadia-steam-extension"
version = "0.1.0"
edition = "2024"

[dependencies]
arcadia-extension-framework = { path = "../arcadia-extension-framework" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
